[package]
name = "testrust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
ftail = { version = "0.3.0", features = ["timezone"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["net", "rt-multi-thread", "macros", "io-util", "signal"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
